<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".MainActivity" >

<LinearLayout
    android:id="@+id/this_is_the_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/enter_carbs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/total_carbs_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_carbs_label" />

        <EditText
            android:id="@+id/input_total_carbs"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/input_total_carbs_hint"
            android:inputType="numberDecimal">
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/enter_fiber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/fiber_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fiber_label" />

        <EditText
            android:id="@+id/input_fiber"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/input_fiber_hint"
            android:inputType="numberDecimal" >
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/enter_sugar_alcohols"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/sugar_alcohol_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sugar_alcohol_label" />

        <EditText
            android:id="@+id/input_sugar_alcohol"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/input_sugar_alcohols_hint"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/enter_calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/total_calories_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_calories_label" />

        <EditText
            android:id="@+id/input_total_calories"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/input_total_calories_hint"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/enter_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_label" />

        <EditText
            android:id="@+id/input_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_description_hint"
            android:inputType="textCapSentences" />
    </LinearLayout>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
     >

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="72"
        android:onClick="doRecordThisClick"
        android:text="@string/button_record" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="28"
        android:onClick="doShowChartsClick"
        android:text="Charts" />
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.0">
    </ListView>

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adViewMainActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-4339702950459490/4647168649">
        </com.google.android.gms.ads.AdView>

</LinearLayout>

</LinearLayout>
