<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".DetailsView">


    <LinearLayout
        android:id="@+id/editing_place_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/dtl_datetms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="dtl_datetms" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="; net carbs: " />

            <TextView
                android:id="@+id/dtl_netcarbs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_edit_carbs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ed_total_carbs_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_carbs_label" />

            <EditText
                android:id="@+id/ed_input_total_carbs"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"></EditText>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/LL_edit_fiber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ed_fiber_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fiber_label" />

            <EditText
                android:id="@+id/ed_input_fiber"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"></EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_edit_sugar_alcohols"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ed_sugar_alcohol_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sugar_alcohol_label" />

            <EditText
                android:id="@+id/ed_input_sugar_alcohol"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_edit_calories"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ed_total_calories_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_calories_label" />

            <EditText
                android:id="@+id/ed_input_total_calories"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LL_edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ed_description_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_label" />

            <EditText
                android:id="@+id/ed_input_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textCapSentences" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1.0">

        <Button
            android:id="@+id/dtl_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onNextRecord"
            android:text="Next" />

        <Button
            android:id="@+id/dtl_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onPreviousRecord"
            android:text="Previous" />

        <Button
            android:id="@+id/saveAndEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSaveEdit"
            android:text="Edit" />

    </LinearLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_Details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-4339702950459490/1158442242"></com.google.android.gms.ads.AdView>

</LinearLayout>
